src/pj/poco/test/neg/NTYPE02.POC
/* test casting between pointers and function pointers */
#pragma poco echo "expect>type mismatch in pointer evaluation"

int i = 2;

int three(int a, int b)
{
return(3);
}

main()
{
int (*fpt)(int a, int b, int c);

fpt = three;
puts("Should get a pointer mismatch");
}

